--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,5 @@
-{% extends 'header.html' %} {% block content %}
+{% extends 'header.html' %}
+{% block content %}
 <main>
     <h1 class="text-center">Buscador Rick & Morty</h1>
 
@@ -35,9 +36,15 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% if images|length == 0 %}
         <h2 class="text-center">La búsqueda no arrojó resultados...</h2>
-        {% else %} {% for img in images %}
+        {% else %}
+        {% for img in images %}
         <div class="col">
-            <div class="card mb-3 ms-5" style="max-width: 540px;">
+            <div class="card mb-3 ms-5 
+                        {% if img.status == 'Alive' %} border-success 
+                        {% elif img.status == 'Dead' %} border-danger 
+                        {% else %} border-warning 
+                        {% endif %}"
+                 style="max-width: 540px;">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="{{ img.url }}" class="card-img-top" alt="imagen">
@@ -48,11 +55,14 @@
                             <h3 class="card-title">{{ img.name }}</h3>
                             <p class="card-text">
                                 <strong>
-                                            {% if true == 'Alive' %} 🟢 {{ img.status }} 
-                                            {% elif true == 'Dead' %} 🔴 {{ img.status }} 
-                                            {% else %} 🟠 {{ img.status }} 
-                                            {% endif %}
-                                        </strong>
+                                    {% if img.status == 'Alive' %}
+                                    🟢 {{ img.status }}
+                                    {% elif img.status == 'Dead' %}
+                                    🔴 {{ img.status }}
+                                    {% else %}
+                                    🟠 {{ img.status }}
+                                    {% endif %}
+                                </strong>
                             </p>
                             <p class="card-text"><small class="text-body-secondary">Última ubicación: {{ img.last_location }}</small></p>
                             <p class="card-text"><small class="text-body-secondary">Episodio inicial: {{ img.first_seen }}</small></p>
@@ -65,9 +75,12 @@
                                 <input type="hidden" name="url" value="{{ img.url }}">
                                 <input type="hidden" name="status" value="{{ img.status }}">
                                 <input type="hidden" name="last_location" value="{{ img.last_location }}">
-                                <input type="hidden" name="first_seen" value="{{ img.first_seen }}"> {% if img in favourite_list %}
-                                <button type="submit" class="btn btn-primary btn-sm float-left" style="color:white" disabled>✔️ Ya está en favoritos</button> {% else %}
-                                <button type="submit" class="btn btn-primary btn-sm float-left" style="color:white">❤️ Añadir a favoritos</button> {% endif %}
+                                <input type="hidden" name="first_seen" value="{{ img.first_seen }}">
+                                {% if img in favourite_list %}
+                                <button type="submit" class="btn btn-primary btn-sm float-left" style="color:white" disabled>✔️ Ya está en favoritos</button>
+                                {% else %}
+                                <button type="submit" class="btn btn-primary btn-sm float-left" style="color:white">❤️ Añadir a favoritos</button>
+                                {% endif %}
                             </form>
                         </div>
                         {% endif %}
@@ -75,7 +88,8 @@
                 </div>
             </div>
         </div>
-        {% endfor %} {% endif %}
+        {% endfor %}
+        {% endif %}
     </div>
 </main>
 {% endblock %}
